--- a/SmartCMS/Web.config
+++ b/SmartCMS/Web.config
@@ -9,8 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-SmartCMS-20170619200502;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-SmartCMS-20170619200502.mdf" />
-    <add name="SmartCMSEntities" connectionString="metadata=res://*/Models.DBEntities.csdl|res://*/Models.DBEntities.ssdl|res://*/Models.DBEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SC-201705201527\SQLEXPRESS;initial catalog=SmartCMS;user id=sa;password=qingdao123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="SmartCMSEntities" connectionString="metadata=res://*/Models.DBEntities.csdl|res://*/Models.DBEntities.ssdl|res://*/Models.DBEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SC-201705201527\SQLEXPRESS;initial catalog=SmartCMS;user id=sa;password=qingdao123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <add name="SmartCMSEntities" connectionString="metadata=res://*/Models.DBEntities.csdl|res://*/Models.DBEntities.ssdl|res://*/Models.DBEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=103.254.77.30;initial catalog=SmartCMS;user id=sa;password=Qingdao123!;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
