--- a/SmartCMS/SmartCMS.csproj
+++ b/SmartCMS/SmartCMS.csproj
@@ -850,6 +850,60 @@
     <Content Include="Content\bower_components\jquery\src\var\support.js" />
     <Content Include="Content\bower_components\jquery\src\var\toString.js" />
     <Content Include="Content\bower_components\jquery\src\wrap.js" />
+    <Content Include="Content\bower_components\markitup\jquery.markitup.js" />
+    <Content Include="Content\bower_components\markitup\sets\default\images\bold.png" />
+    <Content Include="Content\bower_components\markitup\sets\default\images\clean.png" />
+    <Content Include="Content\bower_components\markitup\sets\default\images\image.png" />
+    <Content Include="Content\bower_components\markitup\sets\default\images\italic.png" />
+    <Content Include="Content\bower_components\markitup\sets\default\images\link.png" />
+    <Content Include="Content\bower_components\markitup\sets\default\images\list-bullet.png" />
+    <Content Include="Content\bower_components\markitup\sets\default\images\list-numeric.png" />
+    <Content Include="Content\bower_components\markitup\sets\default\images\picture.png" />
+    <Content Include="Content\bower_components\markitup\sets\default\images\preview.png" />
+    <Content Include="Content\bower_components\markitup\sets\default\images\stroke.png" />
+    <Content Include="Content\bower_components\markitup\sets\default\set.js" />
+    <Content Include="Content\bower_components\markitup\sets\default\style.css" />
+    <Content Include="Content\bower_components\markitup\sets\html\images\bold.png" />
+    <Content Include="Content\bower_components\markitup\sets\html\images\clean.png" />
+    <Content Include="Content\bower_components\markitup\sets\html\images\h1.png" />
+    <Content Include="Content\bower_components\markitup\sets\html\images\h2.png" />
+    <Content Include="Content\bower_components\markitup\sets\html\images\h3.png" />
+    <Content Include="Content\bower_components\markitup\sets\html\images\h4.png" />
+    <Content Include="Content\bower_components\markitup\sets\html\images\h5.png" />
+    <Content Include="Content\bower_components\markitup\sets\html\images\h6.png" />
+    <Content Include="Content\bower_components\markitup\sets\html\images\image.png" />
+    <Content Include="Content\bower_components\markitup\sets\html\images\italic.png" />
+    <Content Include="Content\bower_components\markitup\sets\html\images\link.png" />
+    <Content Include="Content\bower_components\markitup\sets\html\images\list-bullet.png" />
+    <Content Include="Content\bower_components\markitup\sets\html\images\list-item.png" />
+    <Content Include="Content\bower_components\markitup\sets\html\images\list-numeric.png" />
+    <Content Include="Content\bower_components\markitup\sets\html\images\paragraph.png" />
+    <Content Include="Content\bower_components\markitup\sets\html\images\picture.png" />
+    <Content Include="Content\bower_components\markitup\sets\html\images\preview.png" />
+    <Content Include="Content\bower_components\markitup\sets\html\images\stroke.png" />
+    <Content Include="Content\bower_components\markitup\sets\html\readme.txt" />
+    <Content Include="Content\bower_components\markitup\sets\html\set.js" />
+    <Content Include="Content\bower_components\markitup\sets\html\style.css" />
+    <Content Include="Content\bower_components\markitup\skins\markitup\images\bg-container.png" />
+    <Content Include="Content\bower_components\markitup\skins\markitup\images\bg-editor-bbcode.png" />
+    <Content Include="Content\bower_components\markitup\skins\markitup\images\bg-editor-dotclear.png" />
+    <Content Include="Content\bower_components\markitup\skins\markitup\images\bg-editor-html.png" />
+    <Content Include="Content\bower_components\markitup\skins\markitup\images\bg-editor-json.png" />
+    <Content Include="Content\bower_components\markitup\skins\markitup\images\bg-editor-markdown.png" />
+    <Content Include="Content\bower_components\markitup\skins\markitup\images\bg-editor-textile.png" />
+    <Content Include="Content\bower_components\markitup\skins\markitup\images\bg-editor-wiki.png" />
+    <Content Include="Content\bower_components\markitup\skins\markitup\images\bg-editor-xml.png" />
+    <Content Include="Content\bower_components\markitup\skins\markitup\images\bg-editor.png" />
+    <Content Include="Content\bower_components\markitup\skins\markitup\images\handle.png" />
+    <Content Include="Content\bower_components\markitup\skins\markitup\images\menu.png" />
+    <Content Include="Content\bower_components\markitup\skins\markitup\images\submenu.png" />
+    <Content Include="Content\bower_components\markitup\skins\markitup\style.css" />
+    <Content Include="Content\bower_components\markitup\skins\simple\images\handle.png" />
+    <Content Include="Content\bower_components\markitup\skins\simple\images\menu.png" />
+    <Content Include="Content\bower_components\markitup\skins\simple\images\submenu.png" />
+    <Content Include="Content\bower_components\markitup\skins\simple\style.css" />
+    <Content Include="Content\bower_components\markitup\templates\preview.css" />
+    <Content Include="Content\bower_components\markitup\templates\preview.html" />
     <Content Include="Content\bower_components\metisMenu\.bower.json" />
     <Content Include="Content\bower_components\metisMenu\bower.json" />
     <Content Include="Content\bower_components\metisMenu\dist\metisMenu.css" />
@@ -1173,6 +1227,7 @@
     <Content Include="Views\CMS\AddCategory.cshtml" />
     <Content Include="Views\CMS\EditCategory.cshtml" />
     <Content Include="Views\CMS\AddArticle.cshtml" />
+    <Content Include="Views\CMS\EditArticle.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
