--- a/SmartCMS/SmartCMS.csproj
+++ b/SmartCMS/SmartCMS.csproj
@@ -1019,6 +1019,21 @@
     <Content Include="Content\css\media-player.css" />
     <Content Include="Content\css\prettyPhoto.css" />
     <Content Include="Content\css\style.css" />
+    <Content Include="Content\images\507203.png" />
+    <Content Include="Content\images\507207.png" />
+    <Content Include="Content\images\507208.png" />
+    <Content Include="Content\images\507214.png" />
+    <Content Include="Content\images\507216.png" />
+    <Content Include="Content\images\507218.png" />
+    <Content Include="Content\images\507222.png" />
+    <Content Include="Content\images\ava_1.png" />
+    <Content Include="Content\images\ava_2.png" />
+    <Content Include="Content\images\ava_3.png" />
+    <Content Include="Content\images\ava_4.png" />
+    <Content Include="Content\images\ava_5.png" />
+    <Content Include="Content\images\ava_6.png" />
+    <Content Include="Content\images\ava_7.png" />
+    <Content Include="Content\images\shutterstock_18917800.jpg" />
     <Content Include="Content\js\autosize.min.js" />
     <Content Include="Content\js\bootstrap.min.js" />
     <Content Include="Content\js\calendar.min.js" />
