--- a/SmartCMS/SmartCMS.csproj
+++ b/SmartCMS/SmartCMS.csproj
@@ -166,7 +166,13 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>DBEntities.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Models\HotWord.cs">
+      <DependentUpon>DBEntities.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\Log.cs">
+      <DependentUpon>DBEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\PendingQuestion.cs">
       <DependentUpon>DBEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\SmartCMSPrincipal.cs" />
@@ -1169,6 +1175,7 @@
     <Content Include="Content\themes\base\minified\jquery.ui.tabs.min.css" />
     <Content Include="Content\themes\base\minified\jquery.ui.theme.min.css" />
     <Content Include="DBScript\SmartCMS20170621.sql" />
+    <Content Include="DBScript\SmartCMS20170702.sql" />
     <Content Include="Global.asax" />
     <EntityDeploy Include="Models\DBEntities.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
@@ -1245,6 +1252,9 @@
     <Content Include="Views\CMS\EditCategory.cshtml" />
     <Content Include="Views\CMS\AddArticle.cshtml" />
     <Content Include="Views\CMS\EditArticle.cshtml" />
+    <Content Include="Views\CMS\PendingQuestions.cshtml" />
+    <Content Include="Views\CMS\HotWords.cshtml" />
+    <Content Include="Views\CMS\Search.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
