--- a/SmartCMS/SmartCMS.csproj
+++ b/SmartCMS/SmartCMS.csproj
@@ -1040,6 +1040,8 @@
     <Content Include="Content\images\ava_6.png" />
     <Content Include="Content\images\ava_7.png" />
     <Content Include="Content\images\shutterstock_18917800.jpg" />
+    <Content Include="Content\images\veryGood1.png" />
+    <Content Include="Content\images\veryGood2.png" />
     <Content Include="Content\js\autosize.min.js" />
     <Content Include="Content\js\bootstrap.min.js" />
     <Content Include="Content\js\calendar.min.js" />
