working on feedbacks

--- a/SmartCMS/SmartCMS.csproj
+++ b/SmartCMS/SmartCMS.csproj
@@ -1042,6 +1042,7 @@
     <Content Include="Content\images\ava_7.png" />
     <Content Include="Content\images\loading.gif" />
     <Content Include="Content\images\loading_dots.gif" />
+    <Content Include="Content\images\logo.png" />
     <Content Include="Content\images\shutterstock_18917800.jpg" />
     <Content Include="Content\images\veryGood1.png" />
     <Content Include="Content\images\veryGood2.png" />
@@ -1240,7 +1241,6 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Shared\_LayoutHome.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Account\Create.cshtml" />
     <Content Include="Views\Account\UserList.cshtml" />
@@ -1260,6 +1260,8 @@
     <Content Include="Views\CMS\PendingQuestions.cshtml" />
     <Content Include="Views\CMS\HotWords.cshtml" />
     <Content Include="Views\CMS\Search.cshtml" />
+    <Content Include="Views\Shared\_LayoutHome.cshtml" />
+    <Content Include="Views\CMS\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
