--- a/SmartCMS/Web.config
+++ b/SmartCMS/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <!--<add name="SmartCMSEntities" connectionString="metadata=res://*/Models.DBEntities.csdl|res://*/Models.DBEntities.ssdl|res://*/Models.DBEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SC-201705201527\SQLEXPRESS;initial catalog=SmartCMS;user id=sa;password=qingdao123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-    <add name="SmartCMSEntities" connectionString="metadata=res://*/Models.DBEntities.csdl|res://*/Models.DBEntities.ssdl|res://*/Models.DBEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=103.254.77.30;initial catalog=SmartCMS;user id=sa;password=Qingdao123!;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="SmartCMSEntities" connectionString="metadata=res://*/Models.DBEntities.csdl|res://*/Models.DBEntities.ssdl|res://*/Models.DBEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=103.254.77.30;initial catalog=SmartCMS;user id=sa;password=Qingdao123!;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
@@ -18,7 +18,7 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="PendingQuestionsCategoryID" value="21"/>
+    <add key="PendingQuestionsCategoryID" value="21" />
   </appSettings>
   <system.web>
     <httpRuntime targetFramework="4.5" />
