--- a/SmartCMS/SmartCMS.csproj
+++ b/SmartCMS/SmartCMS.csproj
@@ -1268,6 +1268,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Upload\Attachment\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
